<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="tab_movie">Movie</string>
    <string name="tab_ng">Good</string>
    <string name="tab_area">Local</string>
    <string name="tab_customer">Cust</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_index">Home</string>
    <string name="tab_tag_index">Index</string>
    <string name="tab_tag_movie">Movie</string>
    <string name="tab_tag_ng">Night</string>
    <string name="tab_tag_area">Area</string>
    <string name="tab_tag_customer">customer</string>
    <string name="tab_tag_chat">chat</string>
    <string name="tab_vip_temp">Content preparation。。。Coming soon</string>
    <string name="tab_fb_click">Points ads to earn points +</string>
    <string name="tab_fb_click_fast">Too fast,please wait 3 seconds</string>
    <string name="tab_fb_click_wifi">Please use it under Dis conn VPN </string>
    <string name="app_name">Kimi Chat</string>
    <string name="main_activity_name">Kimi Chat</string>
    <string name="toobar_title">Kimi Chat</string>
    <string name="load">loading more data</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="location_type">type</string>
    <string name="location_country">country</string>
    <string name="location_features">name&#038;ping</string>
    <string name="location_choose_title">Region selection</string>
    <string name="location_choose_level">Net ：</string>
    <string name="location_choose_none">Random</string>
    <string name="location_choose_ping">Ping：</string>
    <string name="menu_haha">Yo! You found it.</string>
    <string name="menu_btn_login">Login</string>
    <string name="menu_btn_login_ready">LoginOk</string>
    <string name="menu_btn_name_default">Who am i</string>
    <string name="menu_btn_feedback">Feedback </string>
    <string name="menu_btn_about">About: Afreedom Score</string>
    <string name="menu_btn_share">Share</string>
    <string name="menu_btn_character">AI character demo</string>
    <string name="menu_btn_bug">Report bug</string>
    <string name="menu_btn_version">Version:</string>
    <string name="menu_btn_email">E-mail:</string>
    <string name="menu_btn_logout">Logout</string>
    <string name="menu_btn_setting">Setting</string>
    <string name="menu_btn_app">App recommend</string>
    <string name="menu_btn_donation">Support</string>
    <string name="menu_btn_support">Support author</string>
    <string name="menu_btn_about_context">FreePorn the most stable, free, unlimited，all for you！</string>
    <string name="feed_back">Feedback</string>
    <string name="menu_btn_score">Points:</string>
    <string name="menu_btn_networking">Traffic:</string>
    <string name="menu_btn_cache">Cache:</string>
    <string name="menu_btn_timeuse">Time:</string>
    <string name="menu_btn_score_context">Points can change VIP，more info see "About"</string>
    <string name="menu_btn_cache_context">Cache clear</string>
    <string name="menu_btn_report_log">Thanks for report us</string>
    <string name="menu_btn_country">Region：</string>
    <string name="menu_btn_open_browser">Open in browser</string>
    <string name="menu_btn_copy_url">Copy url</string>
    <string name="menu_btn_favorite">My favorite</string>
    <string name="menu_btn_chat_session">Chat Session</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_favorite_cancel">Cancel Favorite</string>
    <string name="support_info">Please activate several apps to support the author！</string>
    <string name="offerads_ths">Thank you for your support!</string>
    <string name="location_choose_flag_none">Click“ Region ”More regional options</string>
    <string name="vpn_status_down">Click to down load FreeVPN</string>
    <string name="menu_btn_contract">Contact us:  email</string>
    <string name="menu_copy_emai">Copied OK</string>
    <string name="menu_share_title">Share friend</string>
    <string name="menu_share_url">Download Url:\n%s</string>
    <string name="menu_share_confirm">CopyURL</string>
    <string name="menu_share_cancel">Cancel</string>
    <string name="menu_share_copy_ok">Copied OK</string>
    <string name="menu_share_copy_error">Share failed</string>
    <string name="menu_share_text_only">FAIL!! Just can share text</string>
    <string name="close_over">One more again!!</string>
    <string name="login">Sign in</string>
    <string name="setting">Setting</string>
    <string name="reg">Sign up</string>
    <string name="findpass">Forget Pass?</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">E-mail</string>
    <string name="ref_hint">Inviter</string>
    <string name="email_see">Send a email to you</string>
    <string name="email_ok">email set ok</string>
    <string name="email_fail">email set fail</string>
    <string name="free_user">free use</string>
    <string name="password_hint">Password</string>
    <string name="password_error">Password Error</string>
    <string name="re_password_hint">RePassword</string>
    <string name="re_code">Code</string>
    <string name="re_bt_code">Get Code</string>
    <string name="empty_name_pwd">Please fill in the information</string>
    <string name="sex">Sex:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="error_repwd">Password error</string>
    <string name="error_pattern_pass">Password must 6 to 10 letters or numbers</string>
    <string name="error_pattern_name">Password must 3 to 20 letters or numbers</string>
    <string name="reg_success">Register success，login now？</string>
    <string name="remark">Timeline RIGHTS RESERVED.</string>
    <string name="need_login">Login please</string>
    <string name="need_vip">Need VIP permission，please see "About"</string>
    <string name="down_to_loadmore">down to loadmore</string>
    <string name="iwanna_tips">Tell me what du you want ,\nI\'ll be ready for you </string>
    <string name="iwanna_title">support</string>
    <string name="feedback_hint">$3 $5 VIP3</string>
    <string name="recharge">Recharge:</string>
    <string name="money_back_title">Score?</string>
    <string name="send">send</string>
    <string name="iwanna_content_error">Tell me something!</string>
    <string name="iwanna_content_success">I got it !</string>
    <string name="vip_need">Non VIP users are not allowed to visit</string>
    <string name="vip_remove_ads">Upgrade VIP to advertise</string>
    <string name="area_setting">Show Area</string>
    <string name="playcore_setting">play core-ijk</string>
    <string name="playvideo_setting">play video-jiaozi</string>
    <string name="sound_setting">Play audio in not wifi</string>
    <string name="sound_picshow">Video pic show</string>
    <string name="list_video_tiny_need">List Video tiny need</string>
    <string name="area_mi">Area encry</string>
    <string name="sound_play_not_wifi">You are now using a non WIFI network？</string>
    <string name="sound">Obscene</string>
    <string name="text">Interesting novel</string>
    <string name="video">Sex video</string>
    <string name="submit">submit</string>
    <string name="modify">modify</string>
    <string name="vip_tips">please update to vip</string>
    <string name="img">Sex Img</string>
    <string name="tv">TV</string>
    <string name="version_low">version is to low！</string>
    <string name="hidden_area_hit">Hidden “Area” from the Settings</string>
    <string name="wither_hit">See more weather</string>
    <string name="country_select_hit">Click to choose more countries</string>
    <string name="close_hit">Please complete the guide</string>
    <string name="error_getlocation_fail">Failed to obtain location information！</string>
    <string name="error_network_unknown">Connection server error, please check your network connection or try again later.</string>
    <string name="error_network_no_connection">Network connection is not available, please try again later</string>
    <string name="error_network_timeout">Network connection timeout, please try again later</string>
    <string name="error_network_retry">Load error, please click Retry.</string>
    <string name="error_network_nodata_retry">Nodata, please click Retry.</string>
    <string name="error_unknown">Unknow error</string>
    <string name="vpn_bg_click_later">Try later please</string>
    <string name="vpn_bg_click">Conn VPN</string>
    <string name="vpn_bg_error">Click Retry</string>
    <string name="vpn_bg_conning">Connecting..</string>
    <string name="vpn_bg_disconning">Stoping..</string>
    <string name="vpn_bg_conned">Disconnect</string>
    <string name="vpn_need">Maybe need conn VPN first</string>
    <string name="vpn_type_free">Free</string>
    <string name="vpn_type_vip">VIP</string>
    <string name="vpn_type_vip2">VIP2</string>
    <string name="vpn_remote_status">FreePorn·</string>
    <string name="vpn_remote_on">Connected，click to disconnect</string>
    <string name="vpn_remote_off">Disconnect，click to connect</string>
    <string name="vpn_remote_ing">Connecting，please wait</string>
    <string name="about_version_update_to_date">Is the latest version</string>
    <string name="about_version_download_title">Discover new version</string>
    <string name="about_version_download">Download</string>
    <string name="about_version_confirm">Confirm</string>
    <string name="about_version_cancel">Cancel</string>
    <string name="about_download_confirm_title">Confirm Download</string>
    <string name="about_download_confirm_content">
You are now using a non WIFI network, continue to download may consume more network traffic, whether to continue to download？</string>
    <string name="about_download_begin">Start download</string>
    <string name="about_download_finish">End download</string>
    <string name="about_download_title">Downloading Freedom</string>
    <string name="about_download_prepare">Is preparing to download</string>
    <string name="about_download_error">File download error</string>
    <string name="about_download_percent">Downloading %1$s/%2$s</string>
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string name="title_hint">Title</string>
    <string name="url_hint">Site link</string>
    <string name="open_hint">Open mode</string>
    <string name="open_local">Local</string>
    <string name="open_browser">Browser</string>
    <string name="custome_title">Add Custome</string>
    <string name="empty_info">Please fill in the information</string>
    <string name="url_error">Url is error</string>
    <string name="custome_ok">Add OK</string>
    <string name="custome_del_ok">Del OK</string>
    <string name="save">Save</string>
    <string name="schema_hint">Schema</string>
    <string name="schema_http">http://</string>
    <string name="schema_https">https://</string>
    <string name="del_hint">Confirm delete？</string>
    <string name="del_cancel">Cancel</string>
    <string name="custome_del_fail">delete fail</string>
    <string name="my_charater">setting my Ai charater</string>
    <string name="del_ok">OK</string>
    <string name="no_browser">no brower find</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="no_select">no selected</string>
    <string name="save_ok">save ok</string>
    <string name="save_fail">save fail</string>
    <string name="save_img">save image</string>
    <string name="save_start">save start...</string>
    <string name="error_lookup_failed">Failed. Please select another regin</string>
    <string name="error_unreachable">Failed. Please select another regin</string>
    <string name="chat_new">chat session name</string>
    <string name="cancel">Cancel</string>
</resources>