<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_location">
        <item
            android:id="@+id/menu_location"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/location_choose_hint" />
    </group>
    <group android:id="@+id/menu_group_about">
        <item
            android:id="@+id/menu_feedback"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/menu_btn_feedback"
            />
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_btn_about" />
        <item
            android:id="@+id/menu_version"
            android:icon="@drawable/ic_menu_version"
            android:title="@string/menu_btn_version" />
    </group>
    <group android:id="@+id/menu_group_logout">
        <item
            android:id="@+id/menu_louout"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/menu_btn_logout"
            android:visible="false" />
    </group>
</menu>