<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <com.openapi.common.ui.view.MyEditText
                android:id="@+id/et_username"
                style="@style/edit_login"
                android:drawableLeft="@drawable/ic_login_user"
                android:hint="@string/username_hint"
                android:maxLines="1"
                android:singleLine="true" />

            <ImageView style="@style/divider_login" />

            <com.openapi.common.ui.view.MyEditText
                android:id="@+id/et_password"
                style="@style/edit_login"
                android:drawableLeft="@drawable/ic_login_pass"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />

            <ImageView style="@style/divider_login" />

            <com.openapi.common.ui.view.MyEditText
                android:id="@+id/et_repassword"
                style="@style/edit_login"
                android:drawableLeft="@drawable/ic_login_pass"
                android:hint="@string/re_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />

            <ImageView style="@style/divider_login" />
            <com.openapi.common.ui.view.MyEditText
                android:id="@+id/et_ref"
                style="@style/edit_login"
                android:drawableLeft="@drawable/ic_ref"
                android:hint="@string/menu_reg_recomm"
                android:maxLines="1" />

            <ImageView style="@style/divider_login" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/sex"
                    android:textColor="@color/new_deep_black"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/sex"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="40dp"
                        android:text="@string/male"
                        android:textColor="@color/new_deep_black" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="@color/new_deep_black" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/btn_reg"
                style="@style/btn_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_green_selector"
                android:text="@string/reg" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/login"
                android:textColor="@color/gray" />

            <TextView
                style="@style/tv_white_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_10"
                android:textColor="@color/hint" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/ll_content"
            android:layout_marginBottom="@dimen/margin_15"
            android:gravity="center_horizontal|bottom"
            android:text="@string/remark"
            android:textColor="@color/hint"
            android:textSize="@dimen/textsize_12" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_half_transparent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </LinearLayout>
</merge>