<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_80"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_add_custome_title"
                    android:layout_height="wrap_content"
                    android:text="@string/title_hint" />

                <com.openapi.common.ui.view.MyEditText
                    android:id="@+id/et_title"
                    style="@style/edit_login"
                    android:hint="@string/title_hint"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <ImageView style="@style/divider_login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_add_custome_title"
                    android:layout_height="match_parent"
                    android:text="@string/schema_hint" />

                <RadioGroup
                    android:id="@+id/open_schema"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/http"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="40dp"
                        android:text="@string/schema_http"
                        android:textColor="@color/new_deep_black" />

                    <RadioButton
                        android:id="@+id/https"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/schema_https"
                        android:textColor="@color/new_deep_black" />

                </RadioGroup>
            </LinearLayout>

            <ImageView style="@style/divider_login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_add_custome_title"
                    android:layout_height="wrap_content"
                    android:text="@string/url_hint" />

                <com.openapi.common.ui.view.SiteAutoCompleteTextView
                    android:id="@+id/et_url"
                    style="@style/edit_login"
                    android:hint="@string/url_hint"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <ImageView style="@style/divider_login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_add_custome_title"
                    android:layout_height="match_parent"
                    android:text="@string/open_hint" />

                <RadioGroup
                    android:id="@+id/open_mode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/open_local"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="40dp"
                        android:text="@string/open_local"
                        android:textColor="@color/new_deep_black" />

                    <RadioButton
                        android:id="@+id/open_browser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_browser"
                        android:textColor="@color/new_deep_black" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/margin_15"
                android:text="@string/save"
                android:textColor="@color/base_black"
                android:textSize="@dimen/textsize_25" />

            <TextView
                style="@style/tv_white_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_10"
                android:textColor="@color/hint" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/ll_content"
            android:layout_marginBottom="@dimen/margin_15"
            android:gravity="center_horizontal|bottom"
            android:text="@string/remark"
            android:textColor="@color/hint"
            android:textSize="@dimen/textsize_12" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_half_transparent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </LinearLayout>
</FrameLayout>