<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:orientation="horizontal"
        android:paddingBottom="5.0dip"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:paddingTop="5.0dip">

        <Button
            android:id="@+id/loc_btn_type"
            style="@style/btn_location_header"
            android:layout_width="@dimen/location_choose_width1"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/location_choose_margin"
            android:text="@string/location_type" />

        <Button
            android:id="@+id/loc_btn_country"
            style="@style/btn_location_header"
            android:layout_width="@dimen/location_choose_width2"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/location_choose_margin"
            android:text="@string/location_country" />

        <Button
            android:id="@+id/loc_btn_features"
            style="@style/btn_location_header"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/location_features" />
    </LinearLayout>
    <include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="5.0dip"
        android:paddingLeft="15.0dip"
        android:paddingRight="15.0dip"
        android:paddingTop="5.0dip"
        layout="@layout/common_mypage_view"
        />
</LinearLayout>