<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/location_header_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:paddingBottom="5.0dip"
        android:paddingLeft="15.0dip"
        android:paddingRight="15.0dip"
        android:paddingTop="5.0dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loc_btn_type"
            android:layout_width="@dimen/location_choose_width1"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/location_choose_margin"
            android:text="@string/location_type"
            style="@style/btn_location_header"/>

        <Button
            android:id="@+id/loc_btn_country"
            android:layout_width="@dimen/location_choose_width2"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/location_choose_margin"
            android:text="@string/location_country"
            style="@style/btn_location_header"/>

        <Button
            android:id="@+id/loc_btn_features"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/location_features"
            style="@style/btn_location_header"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/loc_rv_location"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="5.0dip"
        android:paddingLeft="15.0dip"
        android:paddingRight="15.0dip"
        android:paddingTop="5.0dip"
        android:scrollbars="none"
         />
</LinearLayout>